--- a/agent-py/pyproject.toml
+++ b/agent-py/pyproject.toml
@@ -27,16 +27,14 @@ build-backend = "setuptools.build_meta"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-langchain-openai = "^0.2.1"
-langchain-anthropic = "^0.2.1"
 langchain = "^0.3.1"
-openai = "^1.51.0"
 langchain-community = "^0.3.1"
 copilotkit = "0.1.42"
 uvicorn = "^0.31.0"
 python-dotenv = "^1.0.1"
 langchain-core = "^0.3.25"
 langgraph-cli = {extras = ["inmem"], version = "^0.1.64"}
+langchain-litellm = "^0.1.4"
 
 [tool.poetry.scripts]
 demo = "sample_agent.demo:main"
