--- a/ui/package.json
+++ b/ui/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 4444",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@copilotkit/react-core": "1.8.3",
-    "@copilotkit/react-ui": "1.8.3",
-    "@copilotkit/runtime": "1.8.3",
+    "@copilotkit/react-core": "^1.8.5",
+    "@copilotkit/react-textarea": "^1.8.5",
+    "@copilotkit/react-ui": "^1.8.5",
+    "@copilotkit/runtime": "^1.8.5",
     "@copilotkit/runtime-client-gql": "1.8.3",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.2",
@@ -59,5 +60,6 @@
       "axios@>=1.0.0 <1.8.2": ">=1.8.2",
       "next@>=15.0.0 <15.2.3": ">=15.2.3"
     }
-  }
+  },
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
